--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,12 @@ h2 {
 }
 
 .App {
-  height: 100%;
+  min-height: 100%;
   padding: 0 17% 10% 17%;
   background-image: url('./background_photo_desktop.jpg');
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   font-family: 'Work Sans', sans-serif;
   font-weight: 500;
